--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -26,6 +26,7 @@ Flag library-only
 library
   hs-source-dirs:      src
   exposed-modules:
+    Data.Filterable
     Profile.Live.Server.Application
     Profile.Live.Server.Application.Bined 
     Profile.Live.Server.Application.Bined.Model
@@ -41,7 +42,6 @@ library
     Profile.Live.Server.Models
     Profile.Live.Server.Monad
     Profile.Live.Server.Utils
-
   default-language:    Haskell2010
   build-depends:       
       base                        >= 4.7      && < 5
@@ -60,6 +60,7 @@ library
     , file-embed                  >= 0.0.10   && < 0.1
     , filepath                    >= 1.4      && < 1.5
     , ghc-events                  >= 0.5      && < 0.6
+    , hashable                    >= 1.2      && < 1.3
     , lens                        >= 4.14     && < 4.15
     , live-profile-client         >= 0.2      && < 0.3
     , live-profile-protocol       >= 0.1      && < 0.2
