--- a/live-profile-server-api/live-profile-server-api.cabal
+++ b/live-profile-server-api/live-profile-server-api.cabal
@@ -31,6 +31,7 @@ library
       base                    >= 4.7      && < 5
     , aeson                   >= 0.11     && < 1.1
     , aeson-injector          >= 1.0.4    && < 1.1
+    , base64-bytestring       >= 1.0      && < 1.1
     , bytestring              >= 0.10     && < 0.11
     , colour                  >= 2.3      && < 2.4
     , ghc-events              >= 0.5      && < 0.6
@@ -44,6 +45,7 @@ library
     , time                    >= 1.5      && < 1.7
     , vector                  >= 0.11     && < 0.12
     , vinyl                   >= 0.5.2    && < 0.6
+    
     
   default-language:    Haskell2010
   default-extensions:
